Sign up works perfectly now